import css styles for search bar from template, modify search field width and position

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -86,8 +86,8 @@
         </div>
     </div>
 
-    <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-center">
+    <div class="navbar-collapse collapse" id="content-nav">
+          <ul class="nav navbar-nav navbar-center" id="wrapper">
             <ul class="nav navbar-nav hidden-sm hidden-md hidden-lg">
               <li><a href="/admissions">ADMISSIONS</a></li>
               <li><a href="/academics">ACADEMICS</a></li>
@@ -99,7 +99,7 @@
             </ul>
         	</ul>
 
-         <ul class="nav navbar-nav navbar-center hidden-xs">
+         <ul class="nav navbar-nav navbar-center hidden-xs" >
            <li class="dropdown">
            <a href="/admissions" >ADMISSIONS </a>
              <ul class="dropdown-menu"><li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li><li><a href="/admissions/apply/transfer/">Transfer Students</a></li><li><a href="/admissions/apply/internationalstudents/">International Students</a></li><li><a href="/admissions/apply/wichewue/">Wiche Wue</a></li><li><a href="/admissions/apply/masters/">Master&rsquo;s Programs</a></li><li><a href="/admissions/apply/militaryveteran/">Military Veterans</a></li><li><a href="/admissions/apply/adultstudents/">Adult Students</a></li><li><a href="/admissions/apply/re-admit/">Re-Admit</a></li><li><a href="/admissions/apply/non-degree/">Non-Degree</a></li><li><a href="/admissions/apply/concurrentlyenrolled/">Concurrently Enrolled</a></li><li><a href="/admissions/apply/metromeritus/">Metro Meritus</a></li></ul>
@@ -143,7 +143,7 @@
                         name="zz"
                         type="text"
                         class="home-input"
-                        placeholder="What would you like to search for?"
+                        placeholder="SEARCH MSU DENVER"
                         onkeyup="MODGLOBALS.HEADER.searchOnKeyUp(this, event)"
                         onclick="return MODGLOBALS.HEADER.searchInputOnClick()"
                         onblur="javascript:internalLabelBlur(this);"
