--- a/app/homepage.html
+++ b/app/homepage.html
@@ -139,7 +139,8 @@
 
         <!-- Hidden Search Bar-->
             <div id="search-input">
-                <input     id="search-text"
+                <span class="glyphicon glyphicon-search glyphicon-opened"></span><!--
+                --><input  id="search-text"
                         name="zz"
                         type="text"
                         class="home-input"
@@ -147,8 +148,10 @@
                         onkeyup="MODGLOBALS.HEADER.searchOnKeyUp(this, event)"
                         onclick="return MODGLOBALS.HEADER.searchInputOnClick()"
                         onblur="javascript:internalLabelBlur(this);"
-                        onfocus="javascript:internalLabelFocus(this);">
-
+                        onfocus="javascript:internalLabelFocus(this);"
+                        tabindex="2";
+                        style="margin-left: -4px";
+                        >
                 <!-- AUTO SUGGEST -->
                 <!-- Code auto suggest server by DEV, PROD, etc. -->
                 <style type="text/css">
@@ -158,9 +161,9 @@
                         border-color: inherit;
                         border-width: 0;
                         width: 207px;
-                        margin-top:6px;
+                        margin-top:3px;
                         font-family: verdana;
-                        font-size:8pt;
+                        font-size:14pt;
                         color:#999;
                     }
 
@@ -196,7 +199,7 @@
                     }
 
                     .gobutton #searchGoLink.disableGoButton {
-                        color: #00529c !important;
+                        color: #7a7a7a !important;
                         cursor: default !important;
                     }
                 </style>
