fix search field location and cursor position, fix other element cursors, round corners

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -150,7 +150,7 @@
                         onblur="javascript:internalLabelBlur(this);"
                         onfocus="javascript:internalLabelFocus(this);"
                         tabindex="2";
-                        style="margin-left: -4px";
+                        style="margin-left: -3px";
                         >
                 <!-- AUTO SUGGEST -->
                 <!-- Code auto suggest server by DEV, PROD, etc. -->
@@ -200,7 +200,7 @@
 
                     .gobutton #searchGoLink.disableGoButton {
                         color: #7a7a7a !important;
-                        cursor: default !important;
+                        /*cursor: default !important;*/
                     }
                 </style>
 
