delete old search bar

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -338,7 +338,7 @@
 
 
         </ul>
-            <div class="">
+            <!-- <div class="">
                 <form class="custom-search-input" role="search" action="https://www.msudenver.edu/search">
                     <div class="input-group">
                       <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
@@ -351,7 +351,7 @@
                       </span>
                     </div>
                 </form>
-            </div>
+            </div> -->
     </div>
   </div>
       <!--/.nav-collapse -->
