--- a/app/homepage.html
+++ b/app/homepage.html
@@ -150,7 +150,7 @@
                         onblur="javascript:internalLabelBlur(this);"
                         onfocus="javascript:internalLabelFocus(this);"
                         tabindex="2";
-                        style="margin-left: -3px";
+                        style="margin-left: -3px; outline: none;";
                         >
                 <!-- AUTO SUGGEST -->
                 <!-- Code auto suggest server by DEV, PROD, etc. -->
@@ -708,16 +708,16 @@ hideAllSubNav();
 $('#nav-search').click(function(){
 	hideAllSubNav();
 	$('#content-sub-nav').hide();
-	$('#nav-cause, #nav-health, #nav-stories, #nav-research, #nav-involved, #nav-search').fadeOut(500);
+	$('#nav-cause, #nav-health, #nav-stories, #nav-research, #nav-involved, #nav-search').fadeTo('fast', 0);
 	setTimeout(function(){
-		$('#search-input').fadeIn(300);
+		$('#search-input').fadeTo('fast', 1);
 		$('#search-text').focus();
 	}, 400);
 });
 
 $('#nav-search-close').click(function(){
-	$('#search-input').hide();
-	$('#nav-cause, #nav-health, #nav-stories, #nav-research, #nav-involved, #nav-search').fadeIn(300);
+	$('#search-input').fadeTo('fast', 0);
+	$('#nav-cause, #nav-health, #nav-stories, #nav-research, #nav-involved, #nav-search').fadeTo('fast', 1);
 });
 </script>
 
