fix opened search glyphicon, reposition search field elements

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -136,9 +136,9 @@
 
 
         <!-- Hidden Search Bar-->
-            <div id="search-input">
-                <span class="glyphicon glyphicon-search glyphicon-opened"></span><!--
-                --><input  id="search-text"
+            <div id="search-input" class="inner-addon left-addon">
+                <span class="glyphicon glyphicon-search glyphicon-opened"></span>
+                      <input  id="search-text"
                         name="zz"
                         type="text"
                         class="home-input"
@@ -149,7 +149,7 @@
                         onfocus="javascript:internalLabelFocus(this);"
                         tabindex="2";
                         style="margin-left: -3px; outline: none;";
-                        >
+                       >
                 <!-- AUTO SUGGEST -->
                 <!-- Code auto suggest server by DEV, PROD, etc. -->
                 <style type="text/css">
