add Raleway font & adjust size, adjust search field width, change search field bkgd color

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -25,6 +25,8 @@
 <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet' type='text/css' media='screen'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
+
 <!-- CSS -->
 <link rel="stylesheet" type="text/css" media="screen" href="styles/home2016.css" />
 
@@ -78,8 +80,7 @@
           <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu/media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
           <img class="msudenver_logo hidden-sm" src="https://msudenver.edu/media/assets/homepagespring2016/MSU-Denverlogo_white.png" alt="MSU Denver Logo">
         </div>
-        <div class="col-xs-2 apply-button"><strong>APPLY NOW</strong>
-        </div>
+        <div class="col-xs-2 apply-button">APPLY NOW</div>
         <div class="col-xs-1">
         </div>
     </div>
