add new logo & adjust position, adjust search/close icon/button colors & positions, change placeholder font

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -25,7 +25,7 @@
 <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet' type='text/css' media='screen'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,800" rel="stylesheet">
 
 <!-- CSS -->
 <link rel="stylesheet" type="text/css" media="screen" href="styles/home2016.css" />
@@ -78,7 +78,7 @@
         </button>
         <div class="col-xs-9">
           <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu/media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
-          <img class="msudenver_logo hidden-sm" src="https://msudenver.edu/media/assets/homepagespring2016/MSU-Denverlogo_white.png" alt="MSU Denver Logo">
+          <img class="msudenver_logo hidden-sm" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Logo">
         </div>
         <div class="col-xs-2 apply-button">APPLY NOW</div>
         <div class="col-xs-1">
@@ -161,9 +161,10 @@
                         border-width: 0;
                         width: 207px;
                         margin-top:3px;
-                        font-family: verdana;
+                        font-family: 'Raleway', sans-serif;
                         font-size:14pt;
-                        color:#999;
+                        color:#bcbcbc;
+                        letter-spacing: 2px;
                     }
 
                     #search-input #autoSuggestResults {
@@ -198,7 +199,7 @@
                     }
 
                     .gobutton #searchGoLink.disableGoButton {
-                        color: #7a7a7a !important;
+                        color: #919195 !important;
                         /*cursor: default !important;*/
                     }
                 </style>
