add media queries to adjust menu list item and apply button font size & spacing; adjust apply button centering and wording;

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -80,7 +80,7 @@
           <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu/media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
           <img class="msudenver_logo hidden-sm" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Logo">
         </div>
-        <div class="col-xs-2 apply-button">APPLY NOW</div>
+        <div class="col-xs-2 apply-button">APPLY</div>
         <div class="col-xs-1">
         </div>
     </div>
