--- a/app/homepage.html
+++ b/app/homepage.html
@@ -77,8 +77,8 @@
           <span class="fa fa-bars"></span>
         </button>
         <div class="col-xs-9">
-          <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu/media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
-          <img class="msudenver_logo hidden-sm" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Logo">
+          <img class="navbar-brand hidden-md hidden-lg img-responsive" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Formal Logo">
+          <img class="msudenver_logo" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Logo">
         </div>
         <div class="col-xs-2 apply-button">APPLY</div>
         <div class="col-xs-1">
