fix collapsible navbar display (not complete)

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -87,15 +87,15 @@
 
     <div class="navbar-collapse collapse" id="content-nav">
           <ul class="nav navbar-nav navbar-center" id="wrapper">
-            <ul class="nav navbar-nav hidden-sm hidden-md hidden-lg">
-              <li><a href="/admissions">ADMISSIONS</a></li>
-              <li><a href="/academics">ACADEMICS</a></li>
-              <li><a href="/campuslife">CAMPUS LIFE </a></li>
-              <li><a href="http://gometrostate.com/">ATHLETICS</a></li>
-              <li><a href="/studenthub"><strong>Student Hub</strong></a></li>
-              <li><a href="/alumni">ALUMNI &#38; FRIENDS</a></li>
-              <li><a href="/facstaff">Faculty &#38; Staff</a></li>
-            </ul>
+            <!-- <ul class="nav navbar-nav hidden-sm hidden-md hidden-lg"> -->
+              <li class="quicktools"><a href="/admissions">ADMISSIONS</a></li>
+              <li class="quicktools"><a href="/academics">ACADEMICS</a></li>
+              <li class="quicktools"><a href="/campuslife">CAMPUS LIFE </a></li>
+              <li class="quicktools"><a href="http://gometrostate.com/">ATHLETICS</a></li>
+              <li class="quicktools"><a href="/studenthub"><strong>Student Hub</strong></a></li>
+              <li class="quicktools"><a href="/alumni">ALUMNI &#38; FRIENDS</a></li>
+              <li class="quicktools"><a href="/facstaff">Faculty &#38; Staff</a></li>
+            <!-- </ul> -->
         	</ul>
 
          <ul class="nav navbar-nav navbar-center hidden-xs" >
