--- a/app/homepage.html
+++ b/app/homepage.html
@@ -71,7 +71,7 @@
 <div class="container-fluid">
 <!-- QUICKLINKS TOOLBAR -->
   <div class="navbar navbar-static-top toolbar">
-    <div class="navbar-header col-xs-12">
+    <div class="navbar-header col-sm-12">
         <button type="button " class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle quick links navigation</span>
           <span class="fa fa-bars"></span>
