--- a/app/homepage.html
+++ b/app/homepage.html
@@ -74,10 +74,11 @@
     <div class="navbar-header col-sm-12">
         <button type="button " class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle quick links navigation</span>
+          <span class="glyphicon glyphicon-search glyphicon-search-mobile"></span>
           <span class="fa fa-bars"></span>
         </button>
         <div class="col-xs-9">
-          <img class="navbar-brand hidden-md hidden-lg img-responsive" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Formal Logo">
+          <img class="hidden-md hidden-lg mobile-logo" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Formal Logo">
           <img class="msudenver_logo" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Logo">
         </div>
         <div class="col-xs-2 apply-button">APPLY</div>
