--- a/app/homepage.html
+++ b/app/homepage.html
@@ -87,17 +87,19 @@
     </div>
 
     <div class="navbar-collapse collapse" id="content-nav">
+        <div class="container-dropdown">
           <ul class="nav navbar-nav navbar-center" id="wrapper">
             <!-- <ul class="nav navbar-nav hidden-sm hidden-md hidden-lg"> -->
-              <li class="quicktools"><a href="/admissions">ADMISSIONS</a></li>
-              <li class="quicktools"><a href="/academics">ACADEMICS</a></li>
-              <li class="quicktools"><a href="/campuslife">CAMPUS LIFE </a></li>
+              <li class="quicktools"><a href="/admissions">ADMISSIONS</a><i class="fa fa-chevron-down pull-right" aria-hidden="true"></i></li>
+              <li class="quicktools"><a href="/academics">ACADEMICS</a><i class="fa fa-chevron-down pull-right" aria-hidden="true"></i></li>
+              <li class="quicktools"><a href="/campuslife">CAMPUS LIFE </a><i class="fa fa-chevron-down pull-right" aria-hidden="true"></i></li>
               <li class="quicktools"><a href="http://gometrostate.com/">ATHLETICS</a></li>
-              <li class="quicktools"><a href="/studenthub"><strong>Student Hub</strong></a></li>
-              <li class="quicktools"><a href="/alumni">ALUMNI &#38; FRIENDS</a></li>
-              <li class="quicktools"><a href="/facstaff">Faculty &#38; Staff</a></li>
+              <li class="quicktools"><a href="/studenthub">STUDENT HUB</a></li>
+              <li class="quicktools"><a href="/alumni">ALUMNI &#38; FRIENDS</a><i class="fa fa-chevron-down pull-right" aria-hidden="true"></i></li>
+              <li class="quicktools"><a href="/facstaff">FACULTY &#38; STAFF</a><i class="fa fa-chevron-down pull-right" aria-hidden="true"></i></li>
             <!-- </ul> -->
         	</ul>
+        </div>
 
          <ul class="nav navbar-nav navbar-center hidden-xs" >
            <li class="dropdown" id="nav-admissions">
