--- a/app/homepage.html
+++ b/app/homepage.html
@@ -90,7 +90,23 @@
         <div class="container-dropdown">
           <ul class="nav navbar-nav navbar-center" id="wrapper">
             <!-- <ul class="nav navbar-nav hidden-sm hidden-md hidden-lg"> -->
-              <li class="quicktools"><a href="/admissions">ADMISSIONS</a><i class="fa fa-chevron-down pull-right" aria-hidden="true"></i></li>
+              <li class="quicktools dropdown"><a href="/admissions">ADMISSIONS</a><i class="fa fa-chevron-down pull-right" aria-hidden="true"></i>
+
+                 <ul class="dropdown-menu">
+                   <li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li>
+                   <li><a href="/admissions/apply/transfer/">Transfer Students</a></li>
+                   <li><a href="/admissions/apply/internationalstudents/">International Students</a></li>
+                   <li><a href="/admissions/apply/wichewue/">Wiche Wue</a></li>
+                   <li><a href="/admissions/apply/masters/">Master&rsquo;s Programs</a></li>
+                   <li><a href="/admissions/apply/militaryveteran/">Military Veterans</a></li>
+                   <li><a href="/admissions/apply/adultstudents/">Adult Students</a></li>
+                   <li><a href="/admissions/apply/re-admit/">Re-Admit</a></li>
+                   <li><a href="/admissions/apply/non-degree/">Non-Degree</a></li>
+                   <li><a href="/admissions/apply/concurrentlyenrolled/">Concurrently Enrolled</a></li>
+                   <li><a href="/admissions/apply/metromeritus/">Metro Meritus</a></li>
+                 </ul>
+
+              </li>
               <li class="quicktools"><a href="/academics">ACADEMICS</a><i class="fa fa-chevron-down pull-right" aria-hidden="true"></i></li>
               <li class="quicktools"><a href="/campuslife">CAMPUS LIFE </a><i class="fa fa-chevron-down pull-right" aria-hidden="true"></i></li>
               <li class="quicktools"><a href="http://gometrostate.com/">ATHLETICS</a></li>
