fix mobile dropdown list inline/mis-alignment; display for mobile only; remove right border

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -88,7 +88,7 @@
 
     <div class="navbar-collapse collapse" id="content-nav">
         <div class="container-dropdown">
-          <ul class="nav navbar-nav navbar-center" id="wrapper">
+          <ul class="nav navbar-nav navbar-center">
             <!-- <ul class="nav navbar-nav hidden-sm hidden-md hidden-lg"> -->
               <li class="quicktools dropdown"><a href="/admissions">ADMISSIONS</a><i class="fa fa-chevron-down pull-right" aria-hidden="true"></i>
 
