--- a/app/homepage.html
+++ b/app/homepage.html
@@ -93,9 +93,9 @@
         <div class="container-dropdown">
           <ul class="nav navbar-nav navbar-center">
             <!-- <ul class="nav navbar-nav hidden-sm hidden-md hidden-lg"> -->
-              <li class="quicktools dropdown-mobile"><a href="/admissions">ADMISSIONS</a><i class="fa fa-chevron-down pull-right" aria-hidden="true"></i>
+              <li class="quicktools " data-toggle="collapse" data-target=".mobbar-collapse"><a href="/admissions">ADMISSIONS</a><i class="fa fa-chevron-down pull-right" aria-hidden="true"></i>
 
-                 <ul class="dropdown-menu">
+                 <ul class="mobbar-collapse">
                    <li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li>
                    <li><a href="/admissions/apply/transfer/">Transfer Students</a></li>
                    <li><a href="/admissions/apply/internationalstudents/">International Students</a></li>
