make hidden mobile navbar visible; move mobile search glyph's position; remove container width; adjust mobile list item border bottoms

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -75,9 +75,9 @@
 <!-- QUICKLINKS TOOLBAR -->
   <div class="navbar navbar-static-top toolbar">
     <div class="navbar-header col-sm-12">
+          <span class="glyphicon glyphicon-search glyphicon-search-mobile"></span>
         <button type="button " class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle quick links navigation</span>
-          <span class="glyphicon glyphicon-search glyphicon-search-mobile"></span>
           <span class="fa fa-bars"></span>
         </button>
         <div class="col-xs-9">
@@ -120,7 +120,7 @@
         	</ul>
         </div>
 
-         <ul class="nav navbar-nav navbar-center hidden-xs" >
+         <ul class="nav navbar-nav navbar-center" >
            <li class="dropdown" id="nav-admissions">
            <a href="/admissions" >ADMISSIONS </a>
              <ul class="dropdown-menu"><li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li><li><a href="/admissions/apply/transfer/">Transfer Students</a></li><li><a href="/admissions/apply/internationalstudents/">International Students</a></li><li><a href="/admissions/apply/wichewue/">Wiche Wue</a></li><li><a href="/admissions/apply/masters/">Master&rsquo;s Programs</a></li><li><a href="/admissions/apply/militaryveteran/">Military Veterans</a></li><li><a href="/admissions/apply/adultstudents/">Adult Students</a></li><li><a href="/admissions/apply/re-admit/">Re-Admit</a></li><li><a href="/admissions/apply/non-degree/">Non-Degree</a></li><li><a href="/admissions/apply/concurrentlyenrolled/">Concurrently Enrolled</a></li><li><a href="/admissions/apply/metromeritus/">Metro Meritus</a></li></ul>
