--- a/app/homepage.html
+++ b/app/homepage.html
@@ -75,7 +75,7 @@
 <!-- QUICKLINKS TOOLBAR -->
   <div class="navbar navbar-static-top toolbar">
     <div class="navbar-header col-sm-12">
-          <span class="glyphicon glyphicon-search glyphicon-search-mobile"></span>
+        <span class="glyphicon glyphicon-search glyphicon-search-mobile"></span>
         <button type="button " class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle quick links navigation</span>
           <span class="fa fa-bars"></span>
@@ -92,36 +92,36 @@
     <div class="navbar-collapse collapse" id="content-nav">
          <ul class="nav navbar-nav navbar-center" >
            <li class="dropdown" id="nav-admissions">
-           <a href="/admissions" >ADMISSIONS </a>
+           <a href="/admissions" >ADMISSIONS </a><i class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></i>
              <ul class="dropdown-menu"><li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li><li><a href="/admissions/apply/transfer/">Transfer Students</a></li><li><a href="/admissions/apply/internationalstudents/">International Students</a></li><li><a href="/admissions/apply/wichewue/">Wiche Wue</a></li><li><a href="/admissions/apply/masters/">Master&rsquo;s Programs</a></li><li><a href="/admissions/apply/militaryveteran/">Military Veterans</a></li><li><a href="/admissions/apply/adultstudents/">Adult Students</a></li><li><a href="/admissions/apply/re-admit/">Re-Admit</a></li><li><a href="/admissions/apply/non-degree/">Non-Degree</a></li><li><a href="/admissions/apply/concurrentlyenrolled/">Concurrently Enrolled</a></li><li><a href="/admissions/apply/metromeritus/">Metro Meritus</a></li></ul>
            </li>
 
            <li class="dropdown" id="nav-academics">
-             <a href="/academics" >ACADEMICS </a>
+             <a href="/academics" >ACADEMICS </a><i class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></i>
                <ul class="dropdown-menu"><li><a href="/academics/academicresources/">Academic Resources</a></li><li><a href="/fys/">First Year Success</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/a-to-z/majors.shtml">Majors &amp; Minors</a></li><li><a href="/academics/schedulescalendarscatalogs/">Schedules, Calendars &amp; Catalogs</a></li><li><a href="/academics/specialprograms/">Special Programs</a></li><li><a href="/las/">College of Letters, Arts and Sciences</a></li><li><a href="/business/">College of Business</a></li><li><a href="/cps/">College of Professional Studies</a></li><li><a href="/education/">School of Education</a></li></ul>
            </li>
 
            <li class="dropdown" id="nav-campus">
-             <a href="/campuslife" >CAMPUS LIFE </a>
+             <a href="/campuslife" >CAMPUS LIFE </a><i class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></i>
              <ul class="dropdown-menu"><li><a href="/asa/">Academic and Student Affairs</a></li><li><a href="/campuslife/academicsupport/">Academic Support</a></li><li><a href="/events/">Events &amp; Calendars</a></li><li><a href="/admissions/cost/">Cost</a></li><li><a href="/campuslife/wellnessrecreation/">Health &amp; Counseling</a></li><li><a href="/campuslife/helpfulresources/">Helpful Resources</a></li><li><a href="/campuslife/involvementrecreation/">Involvement &amp; Recreation</a></li><li><a href="/studentactivities/">Student Activities</a></li><li><a href="/studentengagementandwellness/">Student Engagement and Wellness</a></li><li><a href="/campuslife/studentpublications/">Student Media</a></li></ul>
            </li>
 
            <li class="dropdown" id="nav-athletics">
-             <a href="http://gometrostate.com/" >ATHLETICS </a>
+             <a href="http://gometrostate.com/" >ATHLETICS </a><i class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></i>
            </li>
 
            <li class="dropdown" id="nav-hub">
-             <a href="http://msudenver.edu/studenthub" >STUDENT HUB </a>
+             <a href="http://msudenver.edu/studenthub" >STUDENT HUB </a><i class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></i>
            </li>
 
            <li class="dropdown" id="nav-alumni">
-             <a href="/alumni" >ALUMNI &#38; FRIENDS </a>
+             <a href="/alumni" >ALUMNI &#38; FRIENDS </a><i class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></i>
              <ul class="dropdown-menu"><li><a href="/alumni/contactus/">Contact Us</a></li><li><a href="/alumni/careerservices/">Career Services</a></li><li><a href="/alumni/events/">Events</a></li><li><a href="/alumni/continuingeducation/">Continuing Education</a></li><li><a href="/alumni/studentalumniassociation/">Student Alumni Association</a></li><li><a href="/alumni/give/">Give</a></li><li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li></ul>
            </li>
 
 
             <li class="dropdown last" id="nav-faculty">
-                <a href="/about">FACULTY &#38; STAFF </a>
+                <a href="/about">FACULTY &#38; STAFF </a><i class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></i>
                 <ul class="dropdown-menu"><li><a href="/factsheet/">MSU Denver at a glance</a></li><li><a href="/about/strategicplan2020/">Strategic Plan 2020</a></li><li><a href="/trustees/">Board of Trustees</a></li><li><a href="/working/">Employment</a></li><li><a href="http://www.msudenver.edu/events">Events Calendar</a></li><li><a href="/giving/">The Foundation - Giving to MSU Denver</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/newsroom/">Newsroom</a></li><li><a href="/president/">President</a></li><li><a href="/50/">Our Past</a></li><li><a href="/contact/">Questions / Comments</a></li><li><a href="/visit/">Visit MSU Denver</a></li></ul>
             </li>
 
