adjust mobile glyph display/hide & position; adjust logo mobile height

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -125,7 +125,7 @@
                 <ul class="dropdown-menu"><li><a href="/factsheet/">MSU Denver at a glance</a></li><li><a href="/about/strategicplan2020/">Strategic Plan 2020</a></li><li><a href="/trustees/">Board of Trustees</a></li><li><a href="/working/">Employment</a></li><li><a href="http://www.msudenver.edu/events">Events Calendar</a></li><li><a href="/giving/">The Foundation - Giving to MSU Denver</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/newsroom/">Newsroom</a></li><li><a href="/president/">President</a></li><li><a href="/50/">Our Past</a></li><li><a href="/contact/">Questions / Comments</a></li><li><a href="/visit/">Visit MSU Denver</a></li></ul>
             </li>
 
-            <li id="nav-search"><div><span class="glyphicon glyphicon-search"></span></div></li>
+            <li id="nav-search"><div><span class="glyphicon glyphicon-search search-desktop"></span></div></li>
 
 
         <!-- Hidden Search Bar-->
