removes logo and fixes width on page title

--- a/app/2column.html
+++ b/app/2column.html
@@ -133,16 +133,8 @@
 <!-- BEGINS BREADCRUMBS + SITEHEADER -->
 <div class="container">
     <div class="row">
-      <!-- MSU DENVER LOGO -->
-        <div class="col-lg-3 col-md-3 col-sm-12 msudenver_logo">
-          <a href="/">
-<img class="img-responsive center-block hidden-xs hidden-sm" src="media/assets/msudenver_logo.png" alt="MSU Denver Formal Logo">
-<!-- <img class="img-responsive center-block hidden-xs hidden-sm" src="<t4 type='media' id='91275' formatter='image/path'/>" alt="MSU Denver Formal Logo"> -->
-            </a>
-        </div>
-        <!-- ENDS MSU DENVER LOGO -->
         <!-- SITE HEADER -->
-      <div class="col-lg-9 col-md-9 col-sm-12">
+      <div class="col-xs-12">
       <div class="siteheader">
             <h1>Newsroom</h1>
             <h1><t4 type='navigation' id='101' /></h1>
