--- a/app/2column.html
+++ b/app/2column.html
@@ -393,7 +393,6 @@
 </div>
     <!-- ENDS FOOTER -->
 
-<!-- BEGINS SECOND DEPENDENCY INCLUDE -->
 <!-- sidemenu.js  -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script type="text/javascript" src="https://msudenver.edu/media/prod/js/sidemenu.js"></script>
@@ -414,7 +413,26 @@
 <!-- FooterCode -->
 <t4 type='navigation' id='804' />
 
-<!-- ENDS SECOND DEPENDENCY INCLUDE -->
+<!-- matchHeight -->
+        <script type="text/javascript">
+            (function() {
+
+                $(function() {
+                    // apply your matchHeight on DOM ready (they will be automatically re-applied on load or resize)
+
+                    // get test settings
+                    var byRow = $('body').hasClass('.panel-links');
+
+                    // apply matchHeight to each item container's items
+                    $('.items-container').each(function() {
+                        $(this).find('.item').matchHeight({
+                            byRow: byRow
+                        });
+                    });
+                });
+            })();
+        </script>
+
     <script type="text/javascript">
     var version = "0.2.5",
         template = "Two column template";
