--- a/app/2column.html
+++ b/app/2column.html
@@ -159,6 +159,15 @@
 <!-- BEGINS HERO IMAGE -->
 <t4 type="navigation" id="106" />
 
+<div class="hero">
+<img class="img-responsive" src="http://sitemanager.msudenver.edu/media/content/wcms/departmentsiteguidelines/header_image.png" alt="work study help desk" style="   " />
+  <div class="hero-caption"><p>Body of Page Hero Image Content Type</p>
+<p>Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. <br /><br /></p></div>
+</div>
+
+
+
+
                         <!-- *********************************  -->
                         <!-- SITEMANAGER HEADER ENDS HERE -->
                         <!-- *********************************  -->
