make navbar fixed instead of static; add cursors to mobile chevrons

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -73,7 +73,7 @@
 <!-- *********************************  -->
 <div class="container-fluid">
 <!-- QUICKLINKS TOOLBAR -->
-  <div class="navbar navbar-static-top toolbar">
+  <div class="navbar navbar-fixed-top toolbar">
     <div class="navbar-header col-sm-12">
         <span class="glyphicon glyphicon-search glyphicon-search-mobile"></span>
         <button type="button " class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
